# djangoProject_dz_21_1

./: .editorconfig  .env.sample  .gitignore  groups.json  products.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_author.py  0003_remove_blog_slug.py  0004_blog_slug_alter_blog_created_date_and_more.py  0005_alter_blog_is_published.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixture/: catalog.json  products.json
catalog/management/commands/: fill.py  fixture.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_product_view_counter.py  0003_product_t_ext.py  0003_version.py  0004_product_owner.py  0005_product_is_published.py  0006_alter_product_options.py
catalog/templates/: catalog_products.html  contacts.html  home.html  product.html  product_list.html  products_detail.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
djangoProject/: settings.py
static/: .gitignore
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_alter_user_options.py  0004_user_token.py  0005_remove_user_username.py
users/templates/: reset_password.html
(+3 files in other folders)
