[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Vadim <vdmkonshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
pillow = "^10.3.0"
ipython = "^8.24.0"
django-dump-load-utf8 = "^0.0.4"
python-slugify = "^8.0.4"
pytils = "^0.4.1"
django = "4.2.2"
redis = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
